--- a/public/stylesheets/member.css
+++ b/public/stylesheets/member.css
@@ -6,6 +6,11 @@
         Purpose of the stylesheet follows.
 */
 
+body {line-height:1.5;}
+
+
+
+
 
 
 #main_body {padding:40px 10px 10px 10px; margin:auto;}
