--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,72 +13,53 @@
 </head>
 <body>
 
+  <div class="main">
+    <div class="container">
+      <div class="header">
+        <div class="logo">
+          {logo}
+        </div>
 
-  <div>
-    主菜单(首页｜我的酷购|客户服务|搜索)
+        <div class="banner">
+          banner or stats here.
+        </div>
+
+        <div class="menu">
+          主菜单(首页｜我的酷购|客户服务|搜索)
+        </div>
+
+        <div class="search">
+          search box
+        </div>
+      </div>
+
+      <div class="content">
+        <table width="100%">
+          <tr>
+            <td>
+              <!-- left zone -->
+              <%= render :partial => "left_menu" %> 
+            </td>
+            <td>
+              <!-- middle zone -->
+              <%= yield %>
+            </td>
+            <td>
+              <!-- right zone -->
+              <%= yield :right  %>
+            </td>
+          </tr>
+        </table>
+      </div>
+
+    </div>
   </div>
 
-
-<div id="main_body">
-  <div id="main_menu">
-    {logo} banner....
-  </div>
-
-  <table cellpadding="0" cellspacing="0" border="0" width="100%">
-    <tr>
-      <td width="200" id="left_body" valign="top">
-        <div>
-          会员登录
-        </div>
-        <div>
-          热线与快速检索
-        </div>
-
-        <div>
-          品牌列表
-          报价大全
-        </div>
-
-        <div>
-          客服中心
-        </div>
-
-        <div>
-
-        </div>
-
-
-
-
-
-        <div class="ui-corner-all left_body_block">
-          [%= render(:partial => "/admin/current_user_status") %]
-        </div>
-        <br />
-        <div class="ui-corner-all left_body_block">
-          [%= render(:partial => "/admin/employee_menu") %]
-        </div>
-        <% if session[:user_role]=='admin' %>
-        <br />
-        <div class="ui-corner-all left_body_block">
-          [%= render(:partial => '/admin/admin_menu') %]
-        </div>
-        <% end %>
-      </td>
-      <td id="middle_body" width="80%" valign="top">
-        <%= yield %>
-      </td>
-      <td id="right_body" valign="top">
-        <%= yield :right %>        
-      </td>
-    </tr>
-  </table>
-
-</div>
 
 <div id="ajaxBusy">
   <div class="header">读取数据，请稍候...</div>
   <div class="body"><img src="/images/activity.gif" /></div>
 </div>
+
 </body>
 </html>
