--- a/app/views/member/_left_menu.html.erb
+++ b/app/views/member/_left_menu.html.erb
@@ -1,29 +1,45 @@
-        <div>
-          会员登录
-        </div>
-        <div>
-          热线与快速检索
-        </div>
+<div class="block1 ui-corner-all">
+  <h2>Coolpur.com 酷购</h2>
+  电话: 0755-83998300 
 
-        <div>
-          品牌列表
-          报价大全
-        </div>
+  <br />&nbsp;<br />
+  <a href="#">登录会员账户，<br />查询直供价格。</a>
+</div>
 
-        <div>
-          客服中心
-        </div>
+<div class="block2 ui-corner-all">
+  诺基亚	摩托罗拉
+三星	索尼爱立信
+LG	飞利浦
+联想	海尔
+多普达	阿尔卡特
+天语	夏普
+酷派	金立
+iPhone	长虹
+步步高	中兴
+诚基	华为
+OPPO	夏新
+大显	TCL
+波导	CECT
+桑达	sins
+纽曼	奥克斯
+康佳	AOLE
+创维	万利达
+U9	朵唯
+GT佳通	UT斯达康
+魅族	OKWAP
+金鹏	琦基
 
-        <div class="ui-corner-all left_body_block">
-          [%= render(:partial => "/admin/current_user_status") %]
-        </div>
-        <br />
-        <div class="ui-corner-all left_body_block">
-          [%= render(:partial => "/admin/employee_menu") %]
-        </div>
-        <% if session[:user_role]=='admin' %>
-        <br />
-        <div class="ui-corner-all left_body_block">
-          [%= render(:partial => '/admin/admin_menu') %]
-        </div>
-        <% end %>
+<p><a href="#">全部品牌&gt;&gt;</a></p>
+</div>
+<div class="block2 ui-corner-all">
+  客服: 0755-83998300
+  张三  {ic}QQ:123456789
+  李四 {ic}QQ:123456789
+  王麻子 {ic}QQ:123456789
+</div>
+<% if session[:user_role]=='admin' %>
+  <br />
+  <div class="ui-corner-all left_body_block">
+    [%= render(:partial => '/admin/admin_menu') %]
+  </div>
+<% end %>
