--- a/app/views/member/login.html.erb
+++ b/app/views/member/login.html.erb
@@ -18,7 +18,8 @@
         <div style="height:100px; background-color:#2b6e81;padding:10px;">
           <%= submit_tag "登录" %>
           <div style="margin-top:10px;">
-            </div>
+            <%= flash[:alert] %>
+          </div>
         </div>
       </div>
 
