--- a/app/views/brands/show.html.erb
+++ b/app/views/brands/show.html.erb
@@ -1,19 +1,14 @@
+<div id="main_content">
 
-<div>
-  Brand: <%=h @brand.brand_name %>
-</div>
-
-<div>
-  Search:<input type="text" size="30" />
-</div>
-
-<div>
-  <div>报价</div>
-  <div>图片</div>
-</div>
-
-<div>
- <table class="data_table">
+  <div class="mobile_title_zone ui-corner-all">
+    
+    <div class="title">品牌：<%=h @brand.brand_name %></div>
+    <div class="content">
+      说明：
+    </div>
+  </div>
+  <br />
+  <table class="data_table">
     <caption>手机报价清单</caption>
     <thead>
       <tr>
@@ -23,28 +18,20 @@
         <th>价格</th>
         <th>报价</th>
         <th>报价日期</th>
-        <th>操作</th>
       </tr>
     </thead>
 
     <tbody>
       <% @mobiles.each do |mobile| %>
-      <tr>
+      <tr onclick='goto_mobile(<%= mobile.id %>);'>
         <td><%=h mobile.name %></td>
         <td><%=h mobile.part %></td>
         <td><%=h mobile.remark %></td>
         <td><%=h mobile.price %></td>
         <td>*</td>
         <td>*</td>
-        <td>
-          <div style="float:right;margin-right:4px;"  class="ui-state-default ui-corner-all" title="修改">
-            <%= link_to '查看', mobile, :class=>"ui-icon ui-icon-pencil" %>
-          </div>
-
-        </td>
       </tr>
       <% end %>
     </tbody>
-</table>
-
+  </table>
 </div>
