--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,17 +8,18 @@
   <%= javascript_include_tag 'jquery-1.3.2.min', 'jquery-ui-1.7.2.custom.min', 'jquery.form','jquery.validate.min','application' %>
   <%= yield :head %>
   <style type="text/css">
-  body { background: #2e788f url("/images/main/bg.jpg") top left repeat-x; margin: 0; padding: 0; border: none; font-family: "Helvetica Neue", Arial, Helvetica, sans-serif; }
+  body { margin: 0; padding: 0; border: none; }
   </style>
 </head>
 <body>
 
   <div class="main">
-  <div class="top_links"><a href="www.coolpur.com">Coolpur</a></div>
-    <div class="container ui-corner-all">
+  <div class="bg_top"><div class="top_links"><a href="www.coolpur.com">Coolpur</a></div></div>
+  <div class="bg_top">
+    <div class="container ui-corner-top">
       <div class="header">
         <div class="logo">
-          <img src="/images/main/coolpur_title.png" alt="CoolPur" />
+          <img src="/images/main/coolpur_title.png" alt="CoolPur" style="margin-top:18px;" />
         </div>
 
         <div class="banner">
@@ -40,19 +41,20 @@
         </div>
 
         <div class="search ui-corner-bottom">
-          <form id="form_search" >
-                <span class="left">搜索手机</span>
-                <input id="search_field" type="text" size="30" />
-                <input type="button" value="搜索" />
+			<form id="form_search" class="prompt" action="/search">
+                <input id="search_field" name="model" type="text" size="26" autocomplete="off" />
             </form>
         </div>
       </div>
+    </div>
+  </div>
+    
+    <div class="container ui-corner-bottom">
 
-      <div class="content">
+<div class="content">
         <table width="100%">
           <tr>
             <td valign="top" class="left-zone">
-              <!-- left zone -->
               <%= render :partial => "member/left_menu" %> 
             </td>
             <td valign="top">
@@ -64,8 +66,13 @@
               <%= yield %>
             </td>
             <td valign="top" class="right-zone">
-              <!-- right zone -->
-              <%= yield :right  %>
+			  <div class="block3 ui-corner-all">
+				<div id="cart" class="cart_block">
+				  <%= render(:partial => "store/cart" , :object => @cart) %>
+				</div>
+				<!-- right zone -->
+				<%= yield :right  %>
+			  </div>
             </td>
           </tr>
         </table>
