--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -4,22 +4,81 @@
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
   <title>Coolpur.com - <%= controller.action_name %></title>
-  <%= stylesheet_link_tag 'Coolpur', 'admin', 'jquery_ui_css/redmond/jquery-ui-1.7.2.custom' %>
-  <%= javascript_include_tag 'jquery-1.3.2.min', 'jquery-ui-1.7.2.custom.min' %>
+  <%= stylesheet_link_tag 'member', 'jquery_ui_css/redmond/jquery-ui-1.7.2.custom' %>
+  <%= javascript_include_tag 'jquery-1.3.2.min', 'jquery-ui-1.7.2.custom.min', 'jquery.form','jquery.validate.min','application' %>
+  <%= yield :head %>
+<style type="text/css">
+  body { margin: 0; padding: 0; border: none; }
+  input {border:solid 1px #007072;font-size:120%;padding:2px;margin:2px;font-family:Arial,Verdana,Helvetica,sans-serif;}
+</style>
 <script type="text/javascript">
     $(function() {
       $("input[type='text']:first", document.forms[0]).focus();
     });
 </script>
-  <style type="text/css">
-  body { background: #2e788f url("/images/main/bg.jpg") top left repeat-x; margin: 0; padding: 0; border: none; font-family: "Helvetica Neue", Arial, Helvetica, sans-serif; }
-  </style>
 </head>
 <body>
 
-<div id="login_win">
-  <%= yield %>
-</div>
+  <div class="main">
+  <div class="bg_top"><div class="top_links"><a href="www.coolpur.com">Coolpur</a></div></div>
+  <div class="bg_top">
+    <div class="container ui-corner-top">
+      <div class="header">
+        <div class="logo">
+          <img src="/images/main/coolpur_title.png" alt="CoolPur" style="margin-top:18px;" />
+        </div>
+        <div class="banner">
+          <img src="/images/main/coolpur_banner.jpg" height="90" alt="coolpur" />
+          <img src="/images/main/coolpur_banner.jpg" height="90" alt="coolpur" />
+          <img src="/images/main/coolpur_banner.jpg" height="90" alt="coolpur" />
+        </div>
+        <div class="clear"></div>
+      </div>
+    </div>
+  </div>
+    
+    <div class="container ui-corner-bottom">
+
+<div class="content">
+        <table width="100%" >
+          <tr>
+            <td valign="top" width="100" >
+            </td>
+            <td valign="top" align="center" width="35%">
+              <!-- middle zone -->
+              <div style="width:500px;margin:auto;text-align:left;">
+                <%= yield %>
+              </div>
+            </td>
+            <td width="24">&nbsp;</td>
+            <td valign="top" width="35%">
+      			  <div class="block3 ui-corner-all">
+      			  <p>
+      			   深圳市酷购科技发展有限公司是手机低价直供模式的缔造者和开拓者，公司秉承<b>“低价、快捷、诚信、服务”</b>的核心经营理念，
+               以<b>“为客户创造价值，共享成功”</b>的服务宗旨，全力打造手机低价直供全新模式。
+              </p>
+              <p>
+                深圳市酷购科技发展有限公司将通过我们十余年的手机行业历练及与多家国际国内主流品牌手机厂商、国包商建立的战略合作伙伴关系，
+                可最大限度地压缩手机进货的中间环节。通过酷购独特全新的直供平台，可以大幅度降低手机终端零售商的进货价格，便利快捷的进货方式、
+                极具竞争优势的全线产品，将使得零售商客户最终获取更大的利润。
+              </p>
+      			  </div>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="web_links"></div>
+    </div>
+    <p class="page_foot">深圳市酷购科技开发有限公司 © 2008-2009<br />
+    地址： 中国.深圳 华强北路华联发大厦1118室<br />
+    电话： 86 0755 83998366,83998966<br />
+    传真： 86 0755 83998300<br />
+电子邮件：coolpur@163.com </p>
+  </div>
+
+
+
+
 
 
 </body>
