--- a/app/views/member/login.html.erb
+++ b/app/views/member/login.html.erb
@@ -1,14 +1,11 @@
-<style type="text/css">
-     input {border:solid 1px #007072;font-size:120%;padding:2px;margin:2px;font-family:Arial,Verdana,Helvetica,sans-serif;}
-</style>
-<div style="margin-top:150px;padding:2px; font-size:100%;">
+<div>
   <% form_tag do %>
 
       <div class="ui-corner-all" style="border:solid 3px #216572;">
-        <div style="background-color:white;padding:10px;height:180px;color:#216572;">
+        <div style="background-color:white;padding:10px;height:220px;color:#216572;">
           <img src="/images/main/a_mobile.gif" width="100" height="140" style="float:right;margin-right:10px;margin-top:10px;" />
-        <h3 style="">请登录</h3>
-            <label for="name">登录名(或手机号)</label><br />
+        <h3 style="">请登录 </h3>
+            <label for="name">手机号：</label><br />
             <%= text_field_tag :name, params[:name] %>
           <br /><br />
             <label for="password">登录密码：</label><br />
@@ -17,13 +14,15 @@
         </div>
         <div style="height:100px; background-color:#2b6e81;padding:10px;">
           <%= submit_tag "登录" %>
-          <div style="margin-top:10px;">
+          <div  style="margin-top:10px;">
             <%= flash[:alert] %>
+            <% if flash[:notice] -%>
+              <%= flash[:notice] -%>
+            <% end -%>
           </div>
         </div>
       </div>
-
   <% end %>
-
 </div>
+<br /><br />
 
