--- a/public/stylesheets/member.css
+++ b/public/stylesheets/member.css
@@ -5,220 +5,112 @@
     Description:
         Purpose of the stylesheet follows.
 */
-
-body {line-height:1.5;}
-.main  {background: #4c9200 url("/images/main/back_outer.png") repeat-x scroll center bottom; font-family: "Helvetica Neue", Arial, Helvetica, sans-serif; }
-.top_links {font-size:80%; width:90%; padding-right:10px;text-align:right;margin:auto;}
-.container {margin: auto; width:90%; padding:8px; background-color:#9ac2a0;order:solid 1px green;}
-.header {padding-bottom:16px;}
-.logo {height:90px; vertical-align:middle; float:left;}
-.bg_top {
-	background: #4c9200 url(/images/main/back_outer1.png) repeat-x;
-}
-.banner {float:right;}
-.menu {clear:both;background-color:#B4e189;height:38px;font-size:100%;}
-.menu_left {background-color:#701640;padding-left:20px;padding-right:20px;margin-right:20px;float:left;width:100px;height:100%;font-size:110%;font-weight:bold;color:white;text-align:center;font-family:Arial, Helvetica, sans-serif;}
-.text_padding {padding-top:6px;}
-.text_padding a {
-	color:#333;text-decoration:none;
-}
-.text_padding a.visited {
-	text-decoration: none;
-}
-.text_padding a:hover{
-	color:red;text-decoration:underline;
-}
-.menu_left .text_padding a {color:white;font-weight:bold;text-decoration:none;text-align:center;}
-.menu_left .text_padding a.visited {color:white;text-decoration:none;text-align:center;}
-.menu_left .text_padding a:hover {
-	text-decoration: underline;
-}
-.content {}
-
-.search {clear:both;padding-left:20px;background-color:#b2cda6;height:32px;padding-top:6px;}
-#form_search {background:transparent url(/images/main/search_box.png) no-repeat scroll 0 -1px;padding-left:36px;height:25px;padding-top:3px;}
-#form_search.focused {background-position:left bottom;font-size:100%;color:black;}
-#form_search.prompt input {font-size:85%;color:#aaa;}
-#form_search input {font-size:100%;background:transparent;border:0px;outline-color: -moz-use-text-color; outline-style: none; outline-width: medium;}
-#search_field {border:solid 1px #9ac2a0;font-size:100%;}
-#form_search .left {}
-
-.web_links {font-size:80%;}
-.page_foot {text-align:center;font-size:90%;color:#ddd;}
-
-.left-zone {width:200px; padding-right: 10px;}
-.right-zone {width:200px; padding-left: 10px;}
-.block1 {margin-bottom:10px;background:#999 url('/images/main/masthead.gif') repeat-x;text-align:center; padding-top:10px;padding-bottom:10px;  border:solid 1px #999;font-size:90%;}
-.block1 h2 {margin:0;padding:0; font-size:130%; font-weight:bold;}
-.block2 {margin-bottom:10px;border:solid 1px #999; padding:6px; background: #73a883 url(/images/main/mastbox.gif) repeat-x;}
-.block2 p {text-align:right;font-size:80%;margin:0;padding:4px 20px 0 0;}
-.block3 {border:solid 1px gray;padding:6px; background: #73a883 url(/images/main/mastbox.gif) repeat-x;}
-.cart_block {}
-.left-zone a {
-	text-decoration: none; color:#333;padding:2px;border:solid 1px transparent;font-size:90%;
-}
-.left-zone a.visited {
-	text-decoration: none; color:#999;
-}
-.left-zone a:hover {
-	color:red; background-color:lightyellow;border:solid 1px red;
-}
-
-#main_body {padding:40px 10px 10px 10px; margin:auto;}
-#div_message {padding:2px;margin:4px;clear:both;display:block;height:26px;}
-
-#main_menu {}
-
-.contact {}
-.contact .user {float:left; border:solid 1px #ddd; padding:2px;}
-.contact .info {}
-.contact .info img {width:12px; height:12px;}
-
-
-/*
-#main_zone input {padding:2px;margin:4px 0 4px 0;font-family:Arial,Verdana,Helvetica,sans-serif;}
-#main_zone input[text] {border:solid 1px #216572;}
-#main_zone input.button {font-size:95%;}
-#main_zone select {margin:4px 0 4px 0;font-family:Arial,Verdana,Helvetica,sans-serif;}
+body{line-height:1.5;font-size:1em;}
+.top_links{font-size:80%; width:95%; padding-right:10px;text-align:right;margin:auto;}
+.top_links a{color:white;text-decoration:none;}
+.top_links a.visited{color:white;}
+.top_links a:hover{color:red;text-decoration:underline;}
+.main{background:#4c9200 url("/images/main/back_outer.png") repeat-x scroll center bottom; font-family:"Helvetica Neue",Arial,Helvetica,sans-serif; }
+.container{margin:auto; width:95%; padding:8px; background-color:#9ac2a0;order:solid 1px green;}
+.header{}
+.logo{height:90px; vertical-align:middle; float:left;}
+.bg_top{background:#4c9200 url(/images/main/back_outer1.png) repeat-x;}
+.banner{float:right;}
+.menu{clear:both;background-color:#B4e189;height:38px;font-size:100%;}
+.menu_left{background-color:#701640;padding-left:20px;padding-right:20px;margin-right:20px;float:left;width:100px;height:100%;font-size:110%;font-weight:bold;color:white;text-align:center;font-family:Arial,Helvetica,sans-serif;}
+.text_padding{padding-top:6px;}
+.text_padding a{color:#333;text-decoration:none;}
+.text_padding a.visited{text-decoration:none;}
+.text_padding a:hover{color:red;text-decoration:underline;}
+.menu_left .text_padding a{color:white;font-weight:bold;text-decoration:none;text-align:center;}
+.menu_left .text_padding a.visited{color:white;text-decoration:none;text-align:center;}
+.menu_left .text_padding a:hover{text-decoration:underline;}
+.content{}
+.search{clear:both;padding-left:20px;background-color:#b2cda6; height:32px;}
+.search div {padding-top:10px;}
+#form_search{background:transparent url(/images/main/search_box.png) no-repeat scroll 0 -1px;padding-left:36px;height:25px;padding-top:3px;}
+#form_search.focused{background-position:left bottom;font-size:100%;color:black;}
+#form_search.prompt input{font-size:85%;color:#aaa;}
+#form_search input{font-size:100%;background:transparent;border:0px;outline-color:-moz-use-text-color; outline-style:none; outline-width:medium;}
+#search_field{border:solid 1px #9ac2a0;font-size:100%;}
+#form_search .left{}
+.web_links{font-size:80%;}
+.page_foot{text-align:center;font-size:90%;color:#ddd;}
+.left-zone{width:200px; padding-right:10px;}
+.right-zone{width:200px; padding-left:10px;}
+.block1{margin-bottom:10px;background:#999 url('/images/main/masthead.gif') repeat-x;text-align:center; padding-top:10px;padding-bottom:10px;  border:solid 1px #999;font-size:90%;}
+.block1 h2{margin:0;padding:0; font-size:130%; font-weight:bold;}
+.block2{margin-bottom:10px;border:solid 1px #999; padding:6px; background:#73a883 url(/images/main/mastbox.gif) repeat-x;}
+.block2 p{text-align:right;font-size:80%;margin:0;padding:4px 20px 0 0;}
+.block3{border:solid 1px gray;padding:6px; background:#73a883 url(/images/main/mastbox.gif) repeat-x;}
+.cart_block{}
+.labels a{text-decoration:none; color:#333;padding:3px;font-size:90%; border:none;}
+.labels a.visited{text-decoration:none; color:#999;}
+.labels a:hover{color:red; background-color:lightyellow;padding:2px; border:solid 1px red;}
+#main_body{padding:40px 10px 10px 10px; margin:auto;}
+#div_message{padding:2px;margin:4px;clear:both;display:block;height:26px;}
+#main_menu{}
+.contact{}
+.contact .user{float:left; border:solid 1px #ddd; padding:2px;}
+.contact .info{}
+.contact .info img{width:12px; height:12px;}
+/*#main_zone input{padding:2px;margin:4px 0 4px 0;font-family:Arial, Verdana, Helvetica, sans-serif;}
+#main_zone input[text]{border:solid 1px #216572;}
+#main_zone input.button{font-size:95%;}
+#main_zone select{margin:4px 0 4px 0;font-family:Arial, Verdana, Helvetica, sans-serif;}
 */
-
-#left_body {color:black; padding:8px;}
-.left_body_block {border:solid 3px #216572;background-color: #c7f0fc;}
-#middle_body {}
-#main_zone { padding:12px;border:solid 1px #216572;background-color:white;border-top:0px;}
-#right_body {}
-
-#navigate_menu {font-size:90%;padding:6px;}
-#navigate_menu ul {margin:0; padding:0;}
-#navigate_menu ul li { margin:4px; padding:0px; border:solid 1px #c7f0fc; list-style:none;}
-#navigate_menu ul li a { padding-left:10px;display:block;color:black; text-decoration:none;}
-#navigate_menu ul li a:visited { display:block;color:black;}
-#navigate_menu ul li a:hover {background-color: #ffffcc;}
-
-.upcase_input {text-transform:uppercase;}
-
-.mobile_title_zone {padding:4px;border:solid 1px #999;background:#73a883 url(/images/main/mastbox.gif) repeat-x}
-.mobile_title_zone .title {font-size:110%; font-weight:bold; }
-.mobile_title_zone .content {}
-.mobile_title_zone .content .item {border:solid 1px transparent;padding:4px;margin:1px;float:left;cursor:pointer;}
-.mobile_title_zone .content .item:hover {border:solid 1px red;background-color:lightYellow;}
-.mobile_title_zone .content .photo {float:left;}
-.mobile_title_zone .content .description {float:left;padding-left:6px;font-size: 85%;}
-.mobile_title_zone .content .description h2 {font-size: 100%; font-weight:bold;}
-
-.clear {clear:both;}
-
-.data_table_container {font: normal 11px auto "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;color: #4f6b72;background: #B2CDA6; padding:8px;}
-.data_table {padding: 0;margin: 0;cursor:pointer;}
-.data_table caption {padding: 0 0 5px 0;width: 700px;font: italic 11px "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;text-align: right;
-}
-.data_table .line_error {background-color: #ff9999;}
-.data_table .line_ok {background-color: #ccffcc;}
-
-
-.data_table th {
-	font: bold 15px "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
-	color: #4f6b72;
-	border-right: 1px solid #C1DAD7;
-	border-bottom: 1px solid #C1DAD7;
-	border-top: 1px solid #C1DAD7;
-	letter-spacing: 2px;
-	text-transform: uppercase;
-	text-align: left;
-	padding: 6px 6px 6px 12px;
-	background: #CAE8EA url(../images/data_table/bg_header.jpg) no-repeat;
-}
-
-.data_table th.nobg {
-	border-top: 0;
-	border-left: 0;
-	border-right: 1px solid #C1DAD7;
-	background: none;
-}
-
-.data_table tr.noalt {background: #fff;}
-.data_table tr.alt {background: #F5FAFA;}
-.data_table tr.over {background-color:#EACDA9;}
-.data_table tr.over td.spec,.data_table tr.over td.specalt {background: #EACDA9 url(../images/data_table/bullet4.gif) no-repeat;}
-.data_table tr.over td {border-right: 1px solid white;}
-.data_table td {
-	border-right: 1px solid #C1DAD7;
-	border-bottom: 1px solid #C1DAD7;
-	padding: 6px 6px 6px 12px;
-	color: #4f6b72;
-}
-.data_table td.alt {
-	color: #797268;
-}
-
-.data_table td.spec {
-	border-left: 1px solid #C1DAD7;
-	border-top: 0;
-	background: #fff url(../images/data_table/bullet1.gif) no-repeat;
-	font: bold 95% "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
-}
-
-.data_table td.specalt {
-	border-left: 1px solid #C1DAD7;
-	border-top: 0;
-	background: #f5fafa url(../images/data_table/bullet3.gif) no-repeat;
-	font: bold 95% "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
-	color: #797268;
-}
-
-#tabnav{height: 24px;	margin: 0;	padding-left: 10px;}
-#tabnav li	{margin: 0;padding: 0;display: inline;list-style-type: none;	}
-#tabnav a:link, #tabnav a:visited{float: left;background: #f3f3f3;font-size: 12px;line-height: 18px;font-weight: bold;padding: 2px 10px 2px 10px;	margin-right: 4px;border: 1px solid #ccc;text-decoration: none;	color: #666;}
-#tabnav a:hover{background: #ffffcc;}
-#tabnav span {	float: left;background: #f3f3f3;font-size: 12px;line-height: 18px;font-weight: bold;padding: 2px 10px 2px 10px;	margin-right: 4px;border: 1px solid #ccc;text-decoration: none;	color: #666;border-bottom: 1px solid #fff;background: #fff;color: #000;}
-
-.error_input_text {
-	color:red; font-weight:bold;
-}
-.error_star {font-weight:bold;font-size:120%;color:red;margin-left:4px;}
-
-.fieldWithErrors {padding: 2px;background-color: red;display: table;}
-#errorExplanation {width: 400px;border: 2px solid red;padding: 7px;padding-bottom: 12px;margin-bottom: 20px;background-color: #f0f0f0;}
-#errorExplanation h2 {text-align: left;font-weight: bold;padding: 5px 5px 5px 15px;font-size: 12px;margin: -7px;background-color: #c00;color: #fff;}
-#errorExplanation p {color: #333;margin-bottom: 0;padding: 5px;}
-#errorExplanation ul li {font-size: 12px;list-style: square;}
-
-#ajaxBusy {display:none;border:solid 1px #808080; border-width: 1px 0px; position:absolute;left:50%;top:50%; width:auto;}
-#ajaxBusy .header {background: #f2f2f2 url(../images/sprite.png) repeat-x 0px 0px; border-color: #808080 #808080 #ccc; border-style:solid; border-width:0px 1px 1px; padding:0px 10px; color:#000; font-size:9pt; font-weight:bold; line-height:1.9; font-family: arial,helvetica,clean,scans-serif;}
-#ajaxBusy .body {background-color:#f2f2f2;border-color:#808080;border-style:solid;border-width:0px 1px;padding:10px;}
-
-
-.div_brands {}
-.div_brands a.f {width:100px;height:30px;float:left;display:block;text-align:center;text-decoration:none;
-border-top:solid 1px #ddd;border-left:solid 1px #ddd; border-bottom:solid 1px #666; border-right:solid 1px #666;}
-.div_brands a.visited {text-decoration:none;}
-.div_brands a:hover {background-color:lightYellow;border:solid 1px red; color:red;}
-div.clear {clear:both;}
-
-#notice {
-  border: 2px solid red;
-  padding: 1em;
-  margin-bottom: 2em;
-  background-color: #f0f0f0 ;
-  font: bold smaller sans-serif;
-}
-.cart-title {
-  font: 120%; font-weight:bold; color:black; background:transparent url(/images/main/shopping_cart.png) no-repeat 2px 8px; padding-left:34px;padding-top:10px;
-}
-.item-price, .total-line {
-  text-align: right;
-}
-.total-line .total-cell {
-  font-weight: bold;
-  border-top: 1px solid #595 ;
-}
-#cart, #cart table {
-  font-size: smaller;
-  color:       white;
-}
-#cart table {
-  border-top: 1px dotted #595 ;
-  border-bottom: 1px dotted #595 ;
-  margin-bottom: 10px;
-}
-
+#left_body{color:black; padding:8px;}
+.left_body_block{border:solid 3px #216572;background-color:#c7f0fc;}
+#middle_body{}
+#main_zone{padding:12px;border:solid 1px #216572;background-color:white;border-top:0px;}
+#right_body{}
+#navigate_menu{font-size:90%;padding:6px;}
+#navigate_menu ul{margin:0; padding:0;}
+#navigate_menu ul li{margin:4px; padding:0px; border:solid 1px #c7f0fc; list-style:none;}
+#navigate_menu ul li a{padding-left:10px;display:block;color:black; text-decoration:none;}
+#navigate_menu ul li a:visited{display:block;color:black;}
+#navigate_menu ul li a:hover{background-color:#ffffcc;}
+.upcase_input{text-transform:uppercase;}
+.mobile_title_zone{padding:4px;border:solid 1px #999;background:#73a883 url(/images/main/mastbox.gif) repeat-x}
+.mobile_title_zone .title{font-size:110%; font-weight:bold; }
+.mobile_title_zone .content{}
+.mobile_title_zone .content .item{border:solid 1px transparent;padding:4px;margin:1px;float:left;cursor:pointer;}
+.mobile_title_zone .content .item:hover{border:solid 1px red;background-color:lightYellow;}
+.mobile_title_zone .content .photo{float:left;}
+.mobile_title_zone .content .description{float:left;padding-left:6px;font-size:85%;}
+.mobile_title_zone .content .description h2{font-size:100%; font-weight:bold;}
+.clear{clear:both;}
+.data_table_container{padding:2px;}
+.data_table{border-collapse:collapse; }
+.data_table caption{text-align:right;font-size:70%;}
+.data_table tbody{cursor:pointer;font-size:85%;}
+.data_table th{font-weight:bold;font-size:90%;}
+.data_table td{padding-left:4px;padding-right:4px;}
+.data_table tr.alt{background-color:#B2CDA6;}
+.data_table tr.over{background-color:#B4E189;}
+#tabnav{height:24px;margin:0;padding-left:10px;}
+#tabnav li{margin:0;padding:0;display:inline;list-style-type:none;}
+#tabnav a:link,#tabnav a:visited{float:left;background:#f3f3f3;font-size:12px;line-height:18px;font-weight:bold;padding:2px 10px 2px 10px;margin-right:4px;border:1px solid #ccc;text-decoration:none;color:#666;}
+#tabnav a:hover{background:#ffffcc;}
+#tabnav span{float:left;background:#f3f3f3;font-size:12px;line-height:18px;font-weight:bold;padding:2px 10px 2px 10px;margin-right:4px;border:1px solid #ccc;text-decoration:none;color:#666;border-bottom:1px solid #fff;background:#fff;color:#000;}
+.error_input_text{color:red; font-weight:bold;}
+.error_star{font-weight:bold;font-size:120%;color:red;margin-left:4px;}
+.fieldWithErrors{padding:2px;background-color:red;display:table;}
+#errorExplanation{width:400px;border:2px solid red;padding:7px;padding-bottom:12px;margin-bottom:20px;background-color:#f0f0f0;}
+#errorExplanation h2{text-align:left;font-weight:bold;padding:5px 5px 5px 15px;font-size:12px;margin:-7px;background-color:#c00;color:#fff;}
+#errorExplanation p{color:#333;margin-bottom:0;padding:5px;}
+#errorExplanation ul li{font-size:12px;list-style:square;}
+#ajaxBusy{display:none;border:solid 1px #808080; border-width:1px 0px; position:absolute;left:50%;top:50%; width:auto;}
+#ajaxBusy .header{background:#f2f2f2 url(../images/sprite.png) repeat-x 0px 0px; border-color:#808080 #808080 #ccc; border-style:solid; border-width:0px 1px 1px; padding:0px 10px; color:#000; font-size:9pt; font-weight:bold; line-height:1.9; font-family:arial, helvetica, clean, scans-serif;}
+#ajaxBusy .body{background-color:#f2f2f2;border-color:#808080;border-style:solid;border-width:0px 1px;padding:10px;}
+.div_brands{}
+.div_brands a.f{width:100px;height:30px;float:left;display:block;text-align:center;text-decoration:none;border-top:solid 1px #ddd;border-left:solid 1px #ddd; border-bottom:solid 1px #666; border-right:solid 1px #666;}
+.div_brands a.visited{text-decoration:none;}
+.div_brands a:hover{background-color:lightYellow;border:solid 1px red; color:red;}
+div.clear{clear:both;}
+#notice{border:2px solid red;  padding:1em;  margin-bottom:2em;  background-color:#f0f0f0;  font:bold smaller sans-serif;}
+.cart-title{font:120%; font-weight:bold; color:black; background:transparent url(/images/main/shopping_cart.png) no-repeat 2px 8px; padding-left:34px;padding-top:10px;}
+.item-price,.total-line{text-align:right;}
+.total-line .total-cell{font-weight:bold;  border-top:1px solid #595;}
+#cart,#cart table{font-size:smaller;  color:white;}
+#cart table{border-top:1px dotted #595;  border-bottom:1px dotted #595;  margin-bottom:10px;}
