--- a/app/views/member/forgot.html.erb
+++ b/app/views/member/forgot.html.erb
@@ -1,9 +1,9 @@
 <div>
-   <% form_tag 'reg2' do %>
+   <% form_tag do %>
   <div class="ui-corner-all" style="border:solid 3px #216572;">
     <div style="background-color:white;padding:10px;height:220px;color:#216572;">
 
-      <h1>新会员注册</h1>
+      <h1>重设密码</h1>
      
       <p>
         <label for="name">手机号：</label><br />
@@ -11,7 +11,8 @@
       </p>
     </div>  
     <div style="height:100px; background-color:#2b6e81;padding:10px;">
-      <%= submit_tag "下一步 &gt;", :class => 'submit' %>
+      <%= submit_tag "发送短信到手机", :class => 'submit' %>
+      <%= submit_tag "发送到我的Email", :class => 'submit' %>
       &nbsp;&nbsp;
       <a href="/" class="reg_link">&lt; 返回登录页面</a>
       <div  style="margin-top:10px;">
