--- a/app/views/member/reg3.html.erb
+++ b/app/views/member/reg3.html.erb
@@ -1,1 +1,23 @@
-<h2>Reg ok</h2>
+<h2>注册成功</h2>
+<p>
+尊敬的{hy}:<br />
+您注册的会员账户已经开通，登录密码已经通过短信发送到您的手机上。
+如果您未收到该条短信，可以点击这里重发，或者在会员登录界面点击“忘记密码”，
+重新通过短信获取新的登录密码，无需重新注册。
+</p>
+<p>
+在您通过此酷购直供平台完成第一次交易后，您的会员账户自动转为正式会员账户，同时每次交易的积分自动累加。
+酷购公司将不定期开展积分兑换礼品活动。
+</p>
+<p>
+您可以在登录后点击“我的酷购”菜单，修改您的会员信息（地址，联系人，联系电话等）和修改您的会员登录密码。
+</p>
+
+<p>
+感谢您使用酷购直供平台，我们将通过我们十余年在手机行业与国际国内各品牌手机厂商、国包商建立的战略合作伙伴关系，
+为您提供专业的直供服务。
+</p>
+
+<p>
+<a href="/">注册完成</a>
+</p>
