--- a/app/views/member/_left_menu.html.erb
+++ b/app/views/member/_left_menu.html.erb
@@ -3,7 +3,7 @@
   电话: 0755-83998300 
   <br />
   会员:<%=h session[:member_id].to_s %><br />
-  <a href="member/logout">退出登录</a>
+  <a href="/member/logout">退出登录</a>
 </div>
 
 <div class="block2 labels ui-corner-all">
