--- a/app/views/member/reg2.html.erb
+++ b/app/views/member/reg2.html.erb
@@ -1,5 +1,5 @@
 <div class="ui-corner-all" style="border:solid 3px #216572;">
-  <div style="background-color:white;padding:10px;height:220px;color:#216572;">
+  <div style="background-color:white;padding:10px;color:#216572;">
 
   <h1>注册会员信息</h1>
 
