--- a/app/views/member/reg3.html.erb
+++ b/app/views/member/reg3.html.erb
@@ -1,8 +1,8 @@
 <h2>注册成功</h2>
 <p>
-尊敬的{hy}:<br />
+尊敬的<%= @member.name %>:<br />
 您注册的会员账户已经开通，登录密码已经通过短信发送到您的手机上。
-如果您未收到该条短信，可以点击这里重发，或者在会员登录界面点击“忘记密码”，
+如果您未收到该条短信，可以<a href='javascript:void(0)' onclick="alert('此项功能尚在测试中。')">点击这里重发</a>，或者在会员登录界面点击“忘记密码”，
 重新通过短信获取新的登录密码，无需重新注册。
 </p>
 <p>
@@ -10,7 +10,7 @@
 酷购公司将不定期开展积分兑换礼品活动。
 </p>
 <p>
-您可以在登录后点击“我的酷购”菜单，修改您的会员信息（地址，联系人，联系电话等）和修改您的会员登录密码。
+酷购直供平台在2010年春节前进行网站测试，目前只提供手机报价查询和手机图片浏览功能。其他功能春节后开放。
 </p>
 
 <p>
