--- a/app/views/mobiles/_mobile_photos.html.erb
+++ b/app/views/mobiles/_mobile_photos.html.erb
@@ -1,9 +1,9 @@
 <div id='mobile_photos'>
   <%
-  Dir['public/images/photos/#{@brand.brand_name}/#{@mobile.model}/*.jpg'].each do |file|
+  Dir["public/images/photos/#{@brand.brand_name}/#{@mobile.model}/*.jpg"].each do |file|
   %>
   
-  <img src='/images/photos/#{@brand.brand_name}/#{@mobile.model}/<%= File.basename file %>' />
+  <img src='/images/photos/<%= @brand.brand_name -%>/<%= @mobile.model -%>/<%= File.basename file %>' />
   <% end %>
 </div>
 
